# pybind11-CMake-Setup-Project-Structure

./: .gitignore  setup-venv.sh  setup.py
minimal/: CMakeLists.txt  modulePython.py
minimal/main/: main.cpp
minimal/source/: cpp_to_expose.cpp  cpp_to_expose.h  module_p.cpp  module_p.h
minimal/source/lib/: external_function.cpp  external_function.h
